--- a/templates/home.html
+++ b/templates/home.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-	<meta name="keywords" content="thatfrontend, HTML, CSS, Java, JavaScript, Hibernate, Spring, MVC, google, android" />
-	<meta name="author" content="Francis del Mundo" />
+	<!-- Standard header tags -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="author" content="Francis del Mundo" />
+	<title>Templates</title>
+	<link rel="icon" type="image/png" href="/images/p2-icon.png">
 
 	<!-- Open Graph -->
-	<meta property="og:image" content="http://thatfrontend.com/images/icon-facebook.gif" />
-	<meta property="og:title" content="ThatFrontEnd" />
-	<meta property="og:description" content="The epidermis of the internet" />
-	<meta property="og:site_name" content="ThatFrontEnd.Com" />
-	<meta property="og:url" content="http://thatfrontend.com" />
+	<meta property="og:image" content="/images/p2-icon.png" />
+	<meta property="og:title" content="Prototype.to" />
+	<meta property="og:description" content="Web development and prototypes for everyone" />
+	<meta property="og:site_name" content="Prototype 2" />
+	<meta property="og:url" content="http://prototype.to" />
 	
-	<!-- Link -->
+	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/$.css" />
 	
 	<!-- Scripts -->
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5shiv.js"></script>
 	<![endif]-->
-	
 	<script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
-	
 	<script type="text/javascript" src="js/$.js"></script>
 
 </head>
